; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_branch_nested.c_svn_branch__get_root_rrpath.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_branch_nested.c_svn_branch__get_root_rrpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @svn_branch__get_root_rrpath(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @svn_branch__get_outer_branch_and_eid(i32** %5, i32* %6, i32* %8, i32* %9)
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i8* @svn_branch__get_rrpath_by_eid(i32* %14, i32 %15, i32* %16)
  store i8* %17, i8** %7, align 8
  br label %19

18:                                               ; preds = %2
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  br label %19

19:                                               ; preds = %18, %13
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @SVN_ERR_ASSERT_NO_RETURN(i8* %20)
  %22 = load i8*, i8** %7, align 8
  ret i8* %22
}

declare dso_local i32 @svn_branch__get_outer_branch_and_eid(i32**, i32*, i32*, i32*) #1

declare dso_local i8* @svn_branch__get_rrpath_by_eid(i32*, i32, i32*) #1

declare dso_local i32 @SVN_ERR_ASSERT_NO_RETURN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
